--- a/h743.ioc
+++ b/h743.ioc
@@ -13,7 +13,7 @@ RCC.HPRE=RCC_HCLK_DIV2
 PC12.Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-TIM1.IPParameters=Period,Prescaler,CounterMode,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 No Output,Pulse-PWM Generation4 No Output,LockLevel,Break2Polarity,AutoReloadPreload
+TIM1.IPParameters=Period,Prescaler,CounterMode,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 No Output,Pulse-PWM Generation4 No Output,LockLevel,Break2Polarity,AutoReloadPreload,SourceBRK2DigInput
 SH.ADCx_INP10.0=ADC1_INP10,IN10-Single-Ended
 Dma.ADC3.2.Instance=DMA1_Stream2
 RCC.PLL2_VCI_Range-AdvancedSettings=RCC_PLL2VCIRANGE_0
@@ -23,7 +23,6 @@ PC10.Signal=GPIO_Output
 PC12.Signal=GPIO_Output
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC7.Locked=true
-RCC.PLLFRACN=0
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PD8.Locked=true
 RCC.RTCFreq_Value=32000
@@ -84,7 +83,7 @@ Mcu.Pin6=PH1-OSC_OUT (PH1)
 Mcu.Pin7=PC0
 PD8.Signal=USART3_TX
 Mcu.Pin8=PC1
-Mcu.Pin9=PD8
+Mcu.Pin9=PB0
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Mcu.Pin0=PE6
 Mcu.Pin1=PC13
@@ -93,7 +92,7 @@ Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
 RCC.HRTIMFreq_Value=240000000
 Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin4=PF9
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true
 Mcu.Pin5=PH0-OSC_IN (PH0)
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 ProjectManager.ProjectBuild=false
@@ -132,6 +131,7 @@ PE6.GPIOParameters=GPIO_PuPd
 CORTEX_M7.DisableExec-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_INSTRUCTION_ACCESS_DISABLE
 Dma.RequestsNb=3
 ProjectManager.HalAssertFull=false
+PB0.Locked=true
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 RCC.DIVP2Freq_Value=76000000
@@ -185,7 +185,7 @@ Dma.ADC1.0.Instance=DMA1_Stream0
 RCC.DIVQ1=4
 ADC1.Rank-0\#ChannelRegularConversion=1
 Dma.ADC3.2.SyncEnable=DISABLE
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Dma.ADC3.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 Dma.ADC3.2.SyncRequestNumber=1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -206,7 +206,7 @@ Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 RCC.D2PPRE1=RCC_APB1_DIV2
 ProjectManager.DefaultFWLocation=true
 PD9.Signal=USART3_RX
-NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:true\:true\:3\:false\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:true\:true\:4\:false\:true
 ProjectManager.DeletePrevious=true
 PC0.Signal=ADCx_INP10
 RCC.QSPIFreq_Value=240000000
@@ -218,6 +218,7 @@ ADC3.Resolution=ADC_RESOLUTION_12B
 Dma.ADC3.2.SyncSignalID=NONE
 RCC.SPI6Freq_Value=120000000
 RCC.D1CPREFreq_Value=480000000
+RCC.Tim2Mul=2
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 Dma.USART3_RX.1.SyncEnable=DISABLE
 CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
@@ -283,7 +284,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PE6.Signal=TIM1_BKIN2
 ADC1.NbrOfConversion=2
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCO_SEL-AdvancedSettings,PLL2_VCI_Range-AdvancedSettings,PLL3_VCI_Range-AdvancedSettings,PLL3_VCO_SEL-AdvancedSettings,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCO_SEL-AdvancedSettings,PLL2_VCI_Range-AdvancedSettings,PLL3_VCI_Range-AdvancedSettings,PLL3_VCO_SEL-AdvancedSettings,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2Mul,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 TIM1.Channel-PWM\ Generation4\ No\ Output=TIM_CHANNEL_4
 ProjectManager.AskForMigrate=true
 ADC3.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
@@ -294,7 +295,7 @@ CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_64
 ProjectManager.UnderRoot=true
 CORTEX_M7.IPParameters=CPU_DCache,CPU_ICache,MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region0_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,DisableExec-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings
 Mcu.IP8=TIM3
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
 Mcu.IP9=USART3
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
@@ -302,10 +303,11 @@ ProjectManager.CoupleFile=false
 RCC.PLL3_VCO_SEL-AdvancedSettings=RCC_PLL3VCOMEDIUM
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 RCC.SYSCLKFreq_VALUE=480000000
+Mcu.Pin22=VP_TIM1_VS_no_output4
 RCC.I2C123Freq_Value=120000000
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
 ADC1.master=1
-Mcu.Pin21=VP_TIM1_VS_no_output4
+Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
 PA10.Locked=true
 Dma.USART3_RX.1.SyncSignalID=NONE
 NVIC.ForceEnableDMAVector=true
@@ -319,32 +321,34 @@ ADC1.Rank-1\#ChannelRegularConversion=2
 Dma.ADC1.0.RequestNumber=1
 Dma.ADC1.0.SyncEnable=DISABLE
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+NVIC.TIM1_BRK_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA10
+Mcu.Pin15=PA9
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PC10
-Mcu.Pin13=PA8
+Mcu.Pin16=PA10
+Mcu.Pin13=PC7
 PC6.GPIOParameters=GPIO_ModeDefaultPP,GPIO_PuPd
-Mcu.Pin14=PA9
+Mcu.Pin14=PA8
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin19=PC12
 SH.S_TIM3_CH1.ConfNb=1
 RCC.LPTIM345Freq_Value=120000000
 ProjectManager.ComputerToolchain=false
 PF9.Signal=ADC3_INP2
-Mcu.Pin17=PC11
-Mcu.Pin18=PC12
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
 RCC.LTDCFreq_Value=16125000
 Dma.USART3_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 RCC.SAI4AFreq_Value=240000000
 SH.ADCx_INP11.0=ADC1_INP11,IN11-Single-Ended
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 RCC.USART234578CLockSelection=RCC_USART234578CLKSOURCE_HSI
+TIM1.SourceBRK2DigInput=TIM_BREAKINPUTSOURCE_DISABLE
 ADC1.NbrOfConversionFlag=1
 Dma.USART3_RX.1.RequestNumber=1
-Mcu.Pin11=PC6
-Mcu.Pin12=PC7
-Mcu.Pin10=PD9
+Mcu.Pin11=PD9
+Mcu.Pin12=PC6
+Mcu.Pin10=PD8
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 RCC.DIVQ1Freq_Value=240000000
 RCC.D3PPRE=RCC_APB4_DIV2
@@ -355,6 +359,7 @@ RCC.VCOInput2Freq_Value=8000000
 PD9.Locked=true
 RCC.APB1Freq_Value=120000000
 ADC3.NbrOfConversionFlag=1
+PB0.Signal=GPIO_Output
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 PC0.Locked=true
 ProjectManager.DeviceId=STM32H743ZITx
